[PRE-P6] Apply repository Java formatter