@@ -18,8 +18,7 @@ class RenderFramePacketTest {
         Matrix4f sourceView = new Matrix4f().translation(1.0f, 2.0f, 3.0f);
         Matrix4f sourceProjection = new Matrix4f().scaling(2.0f, 3.0f, 4.0f);
 
-        RenderFramePacket packet =
-                new RenderFramePacket(sourceView, sourceProjection, 1280, 720);
+        RenderFramePacket packet = new RenderFramePacket(sourceView, sourceProjection, 1280, 720);
 
         sourceView.identity();
         sourceProjection.identity();
@@ -39,11 +38,7 @@ class RenderFramePacketTest {
 
     @Test
     void copiedMatricesCannotMutatePacket() {
-        RenderFramePacket packet = new RenderFramePacket(
-                new Matrix4f().translation(4.0f, 5.0f, 6.0f),
-                new Matrix4f().scaling(2.0f),
-                800,
-                600);
+        RenderFramePacket packet = new RenderFramePacket(new Matrix4f().translation(4.0f, 5.0f, 6.0f), new Matrix4f().scaling(2.0f), 800, 600);
 
         Matrix4f firstViewCopy = packet.copyViewTo(new Matrix4f());
         Matrix4f firstProjectionCopy = packet.copyProjectionTo(new Matrix4f());
@@ -63,64 +58,30 @@ class RenderFramePacketTest {
 
     @Test
     void snapshotsOrderedLocalLightsWithoutRetainingCallerList() {
-        RenderPointLight first =
-                new RenderPointLight(1.0f, 0.0f, 1.0f, 1.0f, 0.5f, 0.25f, 0.5f, 5.0f);
-        RenderSpotLight second = new RenderSpotLight(
-                -1.0f,
-                0.0f,
-                1.0f,
-                0.0f,
-                0.0f,
-                -1.0f,
-                0.25f,
-                0.5f,
-                1.0f,
-                0.75f,
-                6.0f,
-                0.2f,
-                0.5f);
+        RenderPointLight first = new RenderPointLight(1.0f, 0.0f, 1.0f, 1.0f, 0.5f, 0.25f, 0.5f, 5.0f);
+        RenderSpotLight second = new RenderSpotLight(-1.0f, 0.0f, 1.0f, 0.0f, 0.0f, -1.0f, 0.25f, 0.5f, 1.0f, 0.75f, 6.0f, 0.2f, 0.5f);
         ArrayList<RenderLocalLight> source = new ArrayList<>(List.of(first, second));
 
-        RenderFramePacket packet =
-                new RenderFramePacket(new Matrix4f(), new Matrix4f(), 800, 600, source);
+        RenderFramePacket packet = new RenderFramePacket(new Matrix4f(), new Matrix4f(), 800, 600, source);
         source.clear();
 
         assertEquals(List.of(first, second), packet.localLights());
-        assertThrows(
-                UnsupportedOperationException.class,
-                () -> packet.localLights().add(first));
+        assertThrows(UnsupportedOperationException.class, () -> packet.localLights().add(first));
     }
 
     @Test
     void carriesImmutableDebugFrameAndLegacyPathsUseEmptyDebugFrame() {
-        DebugFrame debugFrame = new DebugFrame(
-                List.of(new DebugLine(
-                        0.0f, 0.0f, 0.0f,
-                        1.0f, 0.0f, 0.0f,
-                        new DebugColor(0.0f, 1.0f, 0.0f))),
-                List.of());
-        RenderFramePacket packet = new RenderFramePacket(
-                new Matrix4f(),
-                new Matrix4f(),
-                800,
-                600,
-                List.of(),
-                debugFrame);
+        DebugFrame debugFrame = new DebugFrame(List.of(new DebugLine(0.0f, 0.0f, 0.0f, 1.0f, 0.0f, 0.0f, new DebugColor(0.0f, 1.0f, 0.0f))), List.of());
+        RenderFramePacket packet = new RenderFramePacket(new Matrix4f(), new Matrix4f(), 800, 600, List.of(), debugFrame);
 
         assertEquals(debugFrame, packet.debugFrame());
-        assertEquals(
-                DebugFrame.EMPTY,
-                new RenderFramePacket(new Matrix4f(), new Matrix4f(), 800, 600).debugFrame());
-        assertEquals(
-                DebugFrame.EMPTY,
-                new RenderFramePacket(
-                        new Matrix4f(), new Matrix4f(), 800, 600, List.of()).debugFrame());
+        assertEquals(DebugFrame.EMPTY, new RenderFramePacket(new Matrix4f(), new Matrix4f(), 800, 600).debugFrame());
+        assertEquals(DebugFrame.EMPTY, new RenderFramePacket(new Matrix4f(), new Matrix4f(), 800, 600, List.of()).debugFrame());
     }
 
     @Test
     void legacyConstructorProducesEmptyLocalLightList() {
-        RenderFramePacket packet =
-                new RenderFramePacket(new Matrix4f(), new Matrix4f(), 800, 600);
+        RenderFramePacket packet = new RenderFramePacket(new Matrix4f(), new Matrix4f(), 800, 600);
 
         assertTrue(packet.localLights().isEmpty());
     }
@@ -133,25 +94,12 @@ class RenderFramePacketTest {
         assertThrows(NullPointerException.class, () -> new RenderFramePacket(valid, null, 800, 600));
         assertThrows(IllegalArgumentException.class, () -> new RenderFramePacket(valid, valid, 0, 600));
         assertThrows(IllegalArgumentException.class, () -> new RenderFramePacket(valid, valid, 800, -1));
-        assertThrows(
-                NullPointerException.class,
-                () -> new RenderFramePacket(valid, valid, 800, 600, null));
-        assertThrows(
-                NullPointerException.class,
-                () -> new RenderFramePacket(
-                        valid,
-                        valid,
-                        800,
-                        600,
-                        java.util.Arrays.asList((RenderLocalLight) null)));
-        assertThrows(
-                NullPointerException.class,
-                () -> new RenderFramePacket(valid, valid, 800, 600, List.of(), null));
+        assertThrows(NullPointerException.class, () -> new RenderFramePacket(valid, valid, 800, 600, null));
+        assertThrows(NullPointerException.class, () -> new RenderFramePacket(valid, valid, 800, 600, java.util.Arrays.asList((RenderLocalLight) null)));
+        assertThrows(NullPointerException.class, () -> new RenderFramePacket(valid, valid, 800, 600, List.of(), null));
 
         Matrix4f nonFinite = new Matrix4f();
         nonFinite.m00(Float.NaN);
-        assertThrows(
-                IllegalArgumentException.class,
-                () -> new RenderFramePacket(nonFinite, valid, 800, 600));
+        assertThrows(IllegalArgumentException.class, () -> new RenderFramePacket(nonFinite, valid, 800, 600));
     }
 }
